[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/lamp/Lamp.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/center_cursor.png" type="Texture" id=3]
[ext_resource path="res://fonts/roboto25_o1.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/button/InteractiveButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/world/World.gd" type="Script" id=6]
[ext_resource path="res://scenes/button/ButtonVariation.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 25, 0.05, 25 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.74902, 0.74902, 0.74902, 1 )

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )
size = Vector3( 50, 0.1, 50 )

[node name="World" type="Spatial"]
script = ExtResource( 6 )

[node name="Ground" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 3 )
material/0 = null

[node name="Wall" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.267609, 0.922449, 0 )
use_collision = true
width = 1.37803
height = 1.75782
depth = 0.075

[node name="InteractiveButton" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.596491, 1.35254, -0.037866 )

[node name="Lamp" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.41323, 0, 0 )

[node name="ButtonVariation" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.100581, 1.353, -0.038 )

[node name="Lamp2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.625358, 0, 0 )

[node name="FPS" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.17326, -4.84422 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.819152, 0.439385, 0.368688, 0, -0.642788, 0.766044, 0.573577, -0.627507, -0.526541, 0, 64.7139, 0 )
shadow_enabled = true
shadow_color = Color( 0.501961, 0.501961, 0.501961, 1 )
shadow_bias = 0.05
shadow_contact = 0.1
directional_shadow_mode = 1
directional_shadow_normal_bias = 0.1

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InteractionLabel" type="Label" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -150.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Press E to interact with name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterCursor" type="TextureRect" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="on_state_changed" from="InteractiveButton" to="." method="_on_InteractiveButton_on_state_changed"]
[connection signal="on_state_changed" from="ButtonVariation" to="." method="_on_ButtonVariation_on_state_changed"]
